# ml-journey

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json
src/: __init__.py  alexnet.py  alexnet_keras.py  alexnet_marimo.py  alexnet_pytorch.py  batchnorm.py  batchnorm2.py  hide.css  jax_101.py  linear_regression.py  resnet.py  resnet_comp_marimo.py  resnet_comparisons.py  resnet_marimo.py  resnet_pytorch.py  resnet_pytorch_2.py
src/__marimo__/session/: alexnet_marimo.py.json  resnet_comp_marimo.py.json  resnet_marimo.py.json
