[project]
name = "ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19.0",
    "clu>=0.0.12",
    "datasets>=3.1.0",
    "equinox>=0.11.9",
    "flax>=0.10.2",
    "jax>=0.4.35",
    "kaggle>=1.6.17",
    "keras>=3.8.0",
    "marimo>=0.11.8",
    "matplotlib>=3.9.2",
    "optax>=0.2.4",
    "polars>=1.15.0",
    "tensorflow>=2.18.0",
    "tensorflow-datasets>=4.9.7",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "treescope>=0.1.9",
    "wandb>=0.19.6",
]
